--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,12 @@ body {
   right: 0;
   top: 80px;
   width: 40%;
-  height: 100%
+  height: 100%;
+  z-index: 99;
 }
 
 .graph {
-  display: none;
+  /*display: none;*/
   float: left;
   width: 100%;
   fill: #000;
@@ -104,6 +105,7 @@ body {
   padding: 10px;
   border: 1px solid #666;
   border-right: 0;
+  z-index: 999;
 }
 
 #control_panel span {
@@ -161,7 +163,7 @@ circle {
 }
 
 text {
-  font: 10px sans-serif;
+  font: 16px sans-serif;
   pointer-events: none;
 }
 
