--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@ body {
   padding-top: 20px;
   float: left;
   background-color: rgba(0,0,0,0.03);
+  padding-bottom: 180px;
   /*border-top: 1px solid #666;*/
 }
 
