--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ body {
   height: 100%;
   padding-top: 20px;
   float: left;
-  background-color: rgba(0,0,0,0.03);
+  background-color: rgba(222, 222, 222, 0.03);
   padding-bottom: 180px;
   /*border-top: 1px solid #666;*/
 }
