--- a/src/index.css
+++ b/src/index.css
@@ -152,8 +152,8 @@ body {
 .marker {
   display: none;
   position: absolute;
-  top: 0px; 
-  right: 10px; 
+  top: 0px;
+  right: 0px;
   font-size: 12px;
   font-weight:400;
   cursor: pointer;
@@ -277,13 +277,6 @@ path.link.resolved {
   margin-bottom: 5px;
 }
 
-/*.clearfix:before, .clearfix:after {
-  content: " ";
-  display: table;
-}
-.clearfix:after {
-  clear: both;
-}*/
 .fs0 {
   font-size: 16px;
 }
@@ -294,4 +287,65 @@ path.link.resolved {
   width: 20px;
   height: 20px;
   margin-bottom: 20px;
+}
+
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 999;
+}
+
+.modal.js {
+  display: none;
+}
+
+.modal .modal-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+}
+
+.modal .modal-wrapper {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 50%;
+  height: max-content;
+  margin: auto;
+  padding: 40px 60px;
+  background: white;
+}
+
+.modal .modal-body {
+  background: white;
+  border-radius: 2px;
+  padding: 20px;
+  z-index: 9;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+
+.modal .modal-close {
+  color: #909090;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: white;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  padding-top: 8px;
+  cursor: pointer;
+}
+
+.modal-close:hover {
+  color: #333;
 }
