--- a/src/css/index.css
+++ b/src/css/index.css
@@ -369,6 +369,7 @@ path.link.resolved {
   margin: auto;
   padding: 40px 60px;
   background: white;
+  border-radius: 2px;
 }
 
 .modal .modal-body {
@@ -418,11 +419,13 @@ path.link.resolved {
 }
 
 #save {
-  display: none;
   position: fixed;
   bottom: 20px;
   right: 20px;
   cursor: pointer;
+  border: 1px solid #eee;
+  border-radius: 2px;
+  padding: 5px 7px;
 }
 
 #auth_close {
@@ -440,6 +443,11 @@ path.link.resolved {
   border: none;
   cursor: pointer;
   color: white;
+}
+
+#toggle_strong_node {
+  vertical-align: middle;
+  margin-right: 10px;
 }
 
 .drag-item {
